--- a/public/css/backstage.main.css
+++ b/public/css/backstage.main.css
@@ -153,4 +153,26 @@ a.cancelDefault:hover {
   -webkit-animation-name: fadeInLeft20;
   animation-name: fadeInLeft20; }
 
+@keyframes fadeInLeft30 {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-30%, 0, 0);
+    transform: translate3d(-30%, 0, 0); }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none; } }
+@keyframes fadeInLeft30 {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-30%, 0, 0);
+    transform: translate3d(-30%, 0, 0); }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none; } }
+.fadeInLeft30 {
+  -webkit-animation-name: fadeInLeft30;
+  animation-name: fadeInLeft30; }
+
 /*# sourceMappingURL=backstage.main.css.map */
