--- a/public/css/backstage.main.css
+++ b/public/css/backstage.main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*---------------------------*\
   metisMenu插件所需样式
 \*---------------------------*/
@@ -5,60 +6,78 @@
   float: right;
   line-height: 1.42857;
 }
+
 *[dir="rtl"] .metismenu .arrow {
   float: left;
 }
+
 .metismenu .glyphicon.arrow:before {
   content: "\e079";
 }
+
 .metismenu .active > a > .glyphicon.arrow:before {
   content: "\e114";
 }
+
 .metismenu .fa.arrow:before {
   content: "\f104";
 }
+
 .metismenu .active > a > .fa.arrow:before {
   content: "\f107";
 }
+
 .metismenu .ion.arrow:before {
-  content: "\f3d2"
+  content: "";
 }
+
 .metismenu .active > a > .ion.arrow:before {
   content: "\f3d0";
 }
+
 .metismenu .plus-times {
   float: right;
 }
+
 *[dir="rtl"] .metismenu .plus-times {
   float: left;
 }
+
 .metismenu .fa.plus-times:before {
   content: "\f067";
 }
+
 .metismenu .active > a > .fa.plus-times {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
 .metismenu .plus-minus {
   float: right;
 }
+
 *[dir="rtl"] .metismenu .plus-minus {
   float: left;
 }
+
 .metismenu .fa.plus-minus:before {
   content: "\f067";
 }
+
 .metismenu .active > a > .fa.plus-minus:before {
   content: "\f068";
 }
+
 .metismenu .collapse {
   display: none;
 }
+
 .metismenu .collapse.in {
   display: block;
 }
+
 .metismenu .collapsing {
   position: relative;
   height: 0;
@@ -74,97 +93,109 @@
   transition-property: height, visibility;
 }
 
-
 /*------------------------------------*\
     公用样式 &public
 \*------------------------------------*/
-.block{
+.block {
   display: block;
 }
-.inline{
+
+.inline {
   display: inline;
 }
-a.cancelDefault:hover{
+
+a.cancelDefault:hover {
   text-decoration: none;
   cursor: pointer;
   color: inherit;
 }
 
-
 /*------------------------------------*\
     侧边栏样式 &sidebar
 \*------------------------------------*/
-$backgroundColor : #2f4050; // 侧边栏背景色
-$fontColor : #a7b1c2; // 侧边栏字体颜色
-$aHoverColor : #293846; // 侧边栏a标签悬停颜色
-$fontSize : 13px; // 侧边栏字体大小
-
-.jqsb-left-bg{
+.jqsb-left-bg {
   width: 220px;
 }
-.jqsb-left{
-  background-color: $backgroundColor;
+
+.jqsb-left {
+  background-color: #2f4050;
 }
-.metismenu a{
-  color: $fontColor;
-  font-size: $fontSize;
+
+.metismenu a {
+  color: #a7b1c2;
+  font-size: 13px;
   font-weight: 600;
 }
-.nav>li{
-  >a:focus{background-color: $aHoverColor}
-  >a:hover{background-color: $aHoverColor}
+
+.nav > li > a:focus {
+  background-color: #293846;
 }
-.metismenu>li:not(.user-info) a{
+.nav > li > a:hover {
+  background-color: #293846;
+}
+
+.metismenu > li:not(.user-info) a {
   padding: 10px 25px;
 }
-.user-info-dropdown{
+
+.user-info-dropdown {
   margin-left: 25px;
 }
-.user-portrait{
+
+.user-portrait {
   display: block;
   max-width: 70px;
   height: auto;
   margin-top: 20px;
   margin-left: 25px;
 }
-.user-info-dropdown{
+
+.user-info-dropdown {
   position: relative;
 }
-.user-name{
+
+.user-name {
   margin-top: 10px;
   margin-bottom: 5px;
 }
-.user-role{
+
+.user-role {
   margin-bottom: 10px;
 }
 
 /*从左侧淡入 参数是百分比*/
-@mixin fadeInleft($percent){
-  $name : $percent;
-  $percent : -$percent / 100;
-  @keyframes fadeInLeft#{$name} {
-    from {
-      opacity: 0;
-      -webkit-transform: translate3d(percentage($percent), 0, 0);
-      transform: translate3d(percentage($percent), 0, 0);
-    }
-    to {
-      opacity: 1;
-      -webkit-transform: none;
-      transform: none;
-    }
+@keyframes fadeInLeft20 {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
   }
-  .fadeInLeft#{$name} {
-    -webkit-animation-name: fadeInLeft#{$name};
-    animation-name: fadeInLeft#{$name};
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
   }
 }
+.fadeInLeft20 {
+  -webkit-animation-name: fadeInLeft20;
+  animation-name: fadeInLeft20;
+}
 
-@include fadeInleft(20);
-@include fadeInleft(30);
+@keyframes fadeInLeft30 {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-30%, 0, 0);
+    transform: translate3d(-30%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+.fadeInLeft30 {
+  -webkit-animation-name: fadeInLeft30;
+  animation-name: fadeInLeft30;
+}
 
-
-
-
-
-
+/*# sourceMappingURL=backstage.main.css.map */
