--- a/public/grunt/css/backstage.main.scss
+++ b/public/grunt/css/backstage.main.scss
@@ -123,12 +123,14 @@ a.cancelDefault:hover{
 /*------------------------------------*\
     基本样式(此网站基调) &website
 \*------------------------------------*/
+$base-setting: (
+
+);
 
 
 /*------------------------------------*\
     侧边栏样式 &sidebar
 \*------------------------------------*/
-
 // 侧边栏基础设置
 $sidebarSetting: (
         backgroundColor: #2f4050, // 侧边栏背景色
