--- a/public/css/backstage.main.css
+++ b/public/css/backstage.main.css
@@ -153,22 +153,22 @@ a.cancelDefault:hover {
 /*------------------------------------*\
     侧边栏样式 &sidebar
 \*------------------------------------*/
-.metismenu, .item-list {
+.metismenu, .item-list, .sm-item-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
 }
-.metismenu > li > a, .item-list > li > a {
+.metismenu > li > a, .item-list > li > a, .sm-item-list > li > a {
   position: relative;
   display: block;
-  padding: 15px 15px;
+  padding: 15px;
 }
-.metismenu > li > a:focus, .item-list > li > a:focus {
+.metismenu > li > a:focus, .item-list > li > a:focus, .sm-item-list > li > a:focus {
   color: #fff;
   background-color: #293846;
   text-decoration: none;
 }
-.metismenu > li > a:hover, .item-list > li > a:hover {
+.metismenu > li > a:hover, .item-list > li > a:hover, .sm-item-list > li > a:hover {
   color: #fff;
   background-color: #293846;
   text-decoration: none;
@@ -178,12 +178,15 @@ a.cancelDefault:hover {
   background-color: #2f4050;
 }
 .jqsb-left-bg {
-  width: 220px;
+  width: 180px;
 }
 .metismenu a {
   color: #a7b1c2;
   font-size: 13px;
-  font-weight: 700;
+  font-weight: 600;
+}
+.item-list {
+  text-indent: 30px;
 }
 .item-link {
   padding: 10px 25px;
@@ -196,25 +199,74 @@ a.cancelDefault:hover {
 }
 .item-link > i {
   font-size: 10px;
-  margin-right: 5px;
+  margin-right: 10px;
+}
+.user-info {
+  background: url("http://www.isgavin.me/img/header-bg-img.png") no-repeat;
+  padding-left: 15px;
+  padding-top: 25px;
+  padding-bottom: 15px;
 }
 .user-portrait {
   display: block;
-  max-width: 70px;
+  max-width: 40%;
   height: auto;
-  margin-top: 20px;
-  margin-left: 25px;
+  margin-bottom: 8px;
 }
 .user-info-dropdown {
-  margin-left: 25px;
   position: relative;
 }
-.user-name {
-  margin-top: 10px;
-  margin-bottom: 5px;
+.jqsb-left-sm {
+  width: 70px;
 }
-.user-role {
-  margin-bottom: 10px;
+.sm-item-list > li > a {
+  color: #a7b1c2;
+  font-size: 16px;
+  padding: 12px 18px;
+  text-align: center;
+}
+.sm-item-list .personal-icon > a {
+  background-color: #24313d;
+  line-height: 50px;
+  padding: 0;
+  vertical-align: middle;
+}
+.sm-item-list .personal-icon > a > img {
+  width: 30px;
+}
+.sidebar-tooltip .tooltip-inner {
+  max-width: 200px;
+  padding: 0 10px;
+  color: #fff;
+  text-align: center;
+  background-color: #293846;
+  border-radius: 0;
+  line-height: 46px;
+  font-weight: 600;
+}
+.sidebar-tooltip .tooltip.top .tooltip-arrow {
+  border-top-color: #293846;
+}
+.sidebar-tooltip .tooltip.top-left .tooltip-arrow {
+  border-top-color: #293846;
+}
+.sidebar-tooltip .tooltip.top-right .tooltip-arrow {
+  border-top-color: #293846;
+}
+.sidebar-tooltip .tooltip.right .tooltip-arrow {
+  border-right-color: #293846;
+}
+.sidebar-tooltip .tooltip.left .tooltip-arrow {
+  border-left-color: #293846;
+}
+.sidebar-tooltip .tooltip.bottom .tooltip-arrow {
+  border-bottom-color: #293846;
+}
+.sidebar-tooltip .tooltip.bottom-left .tooltip-arrow {
+  border-bottom-color: #293846;
+}
+.sidebar-tooltip .tooltip.bottom-right .tooltip-arrow {
+  border-bottom-color: #293846;
 }
 
 /*# sourceMappingURL=backstage.main.css.map */
