--- a/public/grunt/css/backstage.main.scss
+++ b/public/grunt/css/backstage.main.scss
@@ -1,6 +1,7 @@
 /*---------------------------*\
   metisMenu插件所需样式
 \*---------------------------*/
+
 .metismenu .arrow {
   float: right;
   line-height: 1.42857;
@@ -74,7 +75,6 @@
   transition-property: height, visibility;
 }
 
-
 /*------------------------------------*\
     动画样式 &animate
 \*------------------------------------*/
@@ -108,6 +108,7 @@
 /*------------------------------------*\
     公用样式() &public
 \*------------------------------------*/
+
 .block{
   display: block;
 }
@@ -123,27 +124,45 @@ a.cancelDefault:hover{
 /*------------------------------------*\
     基本样式(此网站基调) &website
 \*------------------------------------*/
-$base-setting: (
-    navbar-width: 50px
+
+$baseSetting: (
+        backgroundColor: #2f4050, // 背景色
+        fontSize: (10px,12px,13px,14px,16px,18px), // 字体尺寸
+        fontColor: #a7b1c2 // 字体颜色
 );
 
+/*------------------------------------*\
+    导航栏样式 &navbar
+\*------------------------------------*/
+
+$navbarSetting: (
+        navbar-width: 50px
+);
+.navbar-inverse {
+  background-color: #2f4050;
+  border-color: #2f4050;
+}
+.navbar {
+  border-radius: 0;
+  border: 0;
+}
 
 /*------------------------------------*\
     侧边栏样式 &sidebar
 \*------------------------------------*/
+
 // 侧边栏基础设置
 $sidebarSetting: (
-        backgroundColor: #2f4050, // 侧边栏背景色
+        scrollbarThumbColor: #FF5722, // 滚动条滑块颜色
         width: 180px, // 侧边栏宽度
-        fontSize: (10px,12px,13px,14px,16px,18px), // 字体尺寸
         fontColor: #a7b1c2 // 字体颜色
 );
 // 侧边栏a标签
 $sidebar-a: (
         hoverColor:#fff,// 悬停时的字体颜色
         focusColor:#fff,// 获得焦点时的字体颜色
-        hoverBackgroundColor:darken(map_get($sidebarSetting,backgroundColor),3%), // 悬停时的背景色
-        focusBackgroundColor:darken(map_get($sidebarSetting,backgroundColor),3%) // 获得焦点时的背景色
+        hoverBackgroundColor:darken(map_get($baseSetting,backgroundColor),3%), // 悬停时的背景色
+        focusBackgroundColor:darken(map_get($baseSetting,backgroundColor),3%) // 获得焦点时的背景色
 );
 
 %sidebar-ul{
@@ -171,7 +190,21 @@ $sidebar-a: (
 
 // 左侧侧边栏样式
 .jqsb-left{
-  background-color: map_get($sidebarSetting,backgroundColor);
+  background-color: map_get($baseSetting,backgroundColor);
+  overflow-x: hidden;
+  &::-webkit-scrollbar{
+    width: 3px;
+    height: 3px;
+  };
+  &::-webkit-scrollbar-track{
+    border-radius: 10px;
+    background-color: #F5F5F5;
+  }
+  &::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: map_get($sidebarSetting,scrollbarThumbColor);
+  }
+
 
   // jqsb-left-bg样式
   @at-root .jqsb-left-bg{
@@ -181,14 +214,14 @@ $sidebar-a: (
       @extend %sidebar-ul;
       a{
         color: map_get($sidebarSetting,fontColor);
-        font-size: nth(map_get($sidebarSetting,fontSize),3);
+        font-size: nth(map_get($baseSetting,fontSize),3);
         font-weight: 600;
       }
     }
 
     @at-root .item-list{
       @extend %sidebar-ul;
-      text-indent: nth(map_get($sidebarSetting,fontSize),1) * 3;
+      text-indent: nth(map_get($baseSetting,fontSize),1) * 3;
     }
 
     @at-root .item-link{
@@ -200,8 +233,8 @@ $sidebar-a: (
         background-color: map_get($sidebar-a,hoverBackgroundColor);
       }
       >i{
-        font-size: nth(map_get($sidebarSetting,fontSize),1);
-        margin-right: nth(map_get($sidebarSetting,fontSize),1);
+        font-size: nth(map_get($baseSetting,fontSize),1);
+        margin-right: nth(map_get($baseSetting,fontSize),1);
       }
     }
 
@@ -233,7 +266,7 @@ $sidebar-a: (
       @extend %sidebar-ul;
       >li>a{
         color: map_get($sidebarSetting,fontColor);
-        font-size: nth(map_get($sidebarSetting,fontSize),5);
+        font-size: nth(map_get($baseSetting,fontSize),5);
         padding: 12px 18px;
         text-align: center;
       }
@@ -241,7 +274,7 @@ $sidebar-a: (
       .personal-icon{
         >a{
           background-color: darken(map_get($sidebar-a,focusBackgroundColor),3%);
-          line-height: map_get($base-setting,navbar-width);
+          line-height: map_get($navbarSetting,navbar-width);
           padding: 0;
           vertical-align: middle;
           >img{
@@ -262,7 +295,7 @@ $sidebar-a: (
         padding: 0 10px;
         color: #fff;
         text-align: center;
-        background-color: map_get($sidebar-a,hoverBackgroundColor);
+        background-color: rgba(map_get($sidebar-a,hoverBackgroundColor),50%);
         border-radius:0;
         line-height: 46px;
         font-weight: 600;
